# fastapi-assignment

./: README  README.md  main.py  pyproject.toml
.github/workflows/: ci-test.yaml
