[tool.poetry]
name = "fastapi-assignment"
version = "0.1.0"
description = "FastAPI mini-assignment assigned by Terence."
authors = ["Win Htet Aung <whaung1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
